<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.edu.iff.pooa20152.compartmusic.compartilhamento"
    android:orientation="vertical"
    android:layout_weight="3"
    android:background="@drawable/bgbinary1">

    <LinearLayout
        android:id="@+id/linearnuvem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="2"
        android:gravity="center"
        android:clickable="true">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
            android:src="@drawable/iconnuvem2" />
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titlecomp1"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desccomp1"
                android:textSize="14dp"/>
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-15dp"
        android:layout_marginBottom="-15dp"
        android:src="@drawable/divisor"/>

    <LinearLayout
        android:id="@+id/linearuser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1.5"
        android:clickable="true"
        android:gravity="center"
        android:layout_marginBottom="30dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/iconuser" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titlecomp2"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/desccomp2"
                android:layout_gravity="center_vertical|right"
                android:textSize="14dp"/>
            </LinearLayout>
    </LinearLayout>

</LinearLayout>