<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.edu.iff.pooa20152.compartmusic.menu_principal"
    android:background="@drawable/bgbinary1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Bem vindo ao menu principal do"
            android:textSize="35dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"/>
        <TextView
            android:id="@+id/txtCMmain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="COMPARTMUSIC!"
            android:textSize="35dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/branco"
            android:gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageButton
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_margin="10dp"
                    android:id="@+id/imgIcon1"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/iconplay"
                    android:background="@null"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/playmusicas"
                    android:gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageButton
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_margin="10dp"
                    android:id="@+id/imgIcon2"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/iconshare"
                    android:background="@null"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/compart"
                    android:gravity="center"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageButton
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="10dp"
                    android:id="@+id/imgIcon3"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/iconuser"
                    android:background="@null" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contatos"
                    android:gravity="center"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginLeft="25dp">
                <ImageButton
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:id="@+id/imgIcon4"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/iconmensagem"
                    android:background="@null"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sms"
                    android:gravity="center"/>
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/rights"/>
    </LinearLayout>

</LinearLayout>
