<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.edu.iff.pooa20152.compartmusic.MainActivity"
    android:background="@drawable/bgbinary1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:src="@drawable/logomain"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="30dp"
            android:textColor="@color/azulClaro"
            android:gravity="center"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="13"
            android:id="@+id/etemailLogin"
            android:textStyle="italic"
            android:hint="Username"
            android:gravity="center"
            android:textColor="@color/branco"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/senha"
            android:textSize="30dp"
            android:textColor="@color/azulClaro"
            android:gravity="center"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="13"
            android:id="@+id/etsenhaLogin"
            android:textStyle="italic"
            android:hint="Password"
            android:gravity="center"
            android:textColor="@color/branco"
            android:layout_gravity="center" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btcadastrarUser"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginRight="15dp"
                android:text="Cadastrar"
                android:textSize="17dp"
                android:textColor="@color/branco"
                android:background="@color/azulClaro"/>

            <Button
                android:id="@+id/btenterlogin"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="Enter"
                android:textSize="17dp"
                android:textColor="@color/branco"
                android:background="@color/azulClaro"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/rights"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>
